test/samples/invalid/cfg/no_terminator.maruir
fun foo()
locals a: u8, b: u8, c: u8;
{
    entry:
        a := b + c;
    bb1:
        b := a + c;
        return;
}
